# surf

gtk2surf/: AUTHORS  Makefile.am  NEWS  README  acconfig.h  autoclean.sh  configure.ac
gtk2surf/pkgdata/: Makefile.am
gtk2surf/src/: About.cc  About.h  DitherWindow.cc  DitherWindow.h  ImageWindow.cc  ImageWindow.h  Kernel.cc  Kernel.h  Makefile.am  Misc.cc  ScriptWindow.cc  ScriptWindow.h  gtk2surf.glade  main.cc
gtksurf/: .cvsignore  AUTHORS  INSTALL  Makefile.am  README  TODO  acconfig.h  acinclude.m4  autoclean.sh  autogen.sh  config.h.in  configure.in
gtksurf/docs/: .cvsignore  Makefile.am  gtksurf.texi
gtksurf/pkgdata/: Makefile.am  above_chain.xpm  below_chain.xpm  chain-closed.xpm  chain-open.xpm  gtksurf.glade  logo.xpm  navigate.xpm  render_curve.xpm  render_surface.xpm
gtksurf/src/: .cvsignore  About.cc  About.h  CurvePropsWindow.cc  CurvePropsWindow.h  DitherWindow.cc  DitherWindow.h  GLArea.cc  GLArea.h  GLtypes.h  Glade.cc  Glade.h  ImageWindow.cc  ImageWindow.h  Kernel.cc  Kernel.h  Makefile.am  Matrix.h  Misc.cc  Misc.h  NavigationWindow.cc  NavigationWindow.h  OOGL.cc  OOGL.h  PrefsWindow.cc  PrefsWindow.h  ScriptWindow.cc  ScriptWindow.h  SurfPropsWindow.cc  SurfPropsWindow.h  Vec3.h  gdk_draw_bitmap.cc  gdk_draw_bitmap.h  main.cc
surf/: .cvsignore  AUTHORS  BUGS  ChangeLog  Doxyfile  Makefile.am  Makefile.global  NEWS  README  README.cvs  THANKS  TODO  acconfig.h  acinclude.m4  autoclean.sh  autogen.sh  background.pic  config.h.in  configure.ac  configure.in  defaults.pic  header.txt  surf.1  surf.spec
surf/curve/: Array.h  Bezout.h  BigInteger.cc  BigInteger.h  DrawCurve.cc  DrawCurve.h  Makefile.am  Matrix.h  Monom.h  RBTree.cc  RBTree.h  RefCounter.h  RootFinder2d.cc  RootFinder2d.h  RootFinder3d.cc  RootFinder3d.h  TreePolynom.h  defs.h  doubleMath.h  examples.txt  mygmp.cc  mygmp.h  resultant.cc  resultant.h
surf/debian/: README.debian  changelog  control  copyright  dirs  files  menu  rules
surf/debug/: Makefile.am  Timer.h  debug.cc  debug.h  surfdebug.cc  surfdebug.h
surf/dither/: Makefile.am  copy_rgb_to_float.cc  copy_rgb_to_float.h  copy_rgb_to_float_curve.cc  copy_rgb_to_float_curve.h  dither.h  dither_brute.cc  dither_brute.h  dither_clustered.cc  dither_clustered.h  dither_dispersed.cc  dither_dispersed.h  dither_dot_diffusion.cc  dither_dot_diffusion.h  dither_floyd_steinberg.cc  dither_floyd_steinberg.h  dither_jarvis_judis_ninke.cc  dither_jarvis_judis_ninke.h  dither_pixel_radius_adjust.cc  dither_pixel_radius_adjust.h  dither_smooth_dot_diffusion.cc  dither_smooth_dot_diffusion.h  dither_stucki.cc  dither_stucki.h
surf/docs/: .cvsignore  Makefile.am  README  TODO  manual.sgml  surf.1  surf.texi
surf/draw/: Makefile.am  NewClip.cc  NewClip.h  NewClipAlgebraic.cc  NewClipAlgebraic.h  NewClipAlgebraicCube.cc  NewClipAlgebraicCube.h  NewClipAlgebraicCyl.cc  NewClipAlgebraicCyl.h  NewClipAlgebraicDode.cc  NewClipAlgebraicDode.h  NewClipAlgebraicIco.cc  NewClipAlgebraicIco.h  NewClipAlgebraicOcta.cc  NewClipAlgebraicOcta.h  NewClipAlgebraicTetra.cc  NewClipAlgebraicTetra.h  NewClipAlgebraicUser.cc  NewClipAlgebraicUser.h  NewClipNone.h  NewClipSphere.cc  NewClipSphere.h  NewClipSphereCentral.cc  NewClipSphereCentral.h  NewClipSphereParallel.cc  NewClipSphereParallel.h  NewSimpleClip.cc  NewSimpleClip.h  Preview.h  SurfaceCalc.cc  SurfaceCalc.h
surf/drawfunc/: Bezier.cc  Bezier.h  Clip.cc  Clip.h  DrawFunc.cc  DrawFunc.h  DrawfuncData.cc  DrawfuncData.h  Horner.cc  Horner.h  Hornergroup.cc  Hornergroup.h  HornergroupXY.cc  HornergroupXY.h  HornergroupXYZ.cc  HornergroupXYZ.h  Makefile.am  MappingMatrix.cc  MappingMatrix.h  Monomial.h  MultiIndex.h  MultiVariatePolynom.cc  MultiVariatePolynom.h  Position.cc  Position.h  RationalHornerXY.cc  RationalHornerXY.h  Sturmchain.cc  Sturmchain.h  UniVariatePolynom.cc  UniVariatePolynom.h  Vector.cc  Vector.h
surf/gtkgui/: .cvsignore  ClipWindow.cc  ClipWindow.h  ColorSelectionButton.cc  ColorSelectionButton.h  ColorWindow.cc  ColorWindow.h  ConfigurationWindow.cc  ConfigurationWindow.h  DisplayWindow.cc  DisplayWindow.h  DitherWindow.cc  DitherWindow.h  Document.cc  Document.h  DrawingArea.cc  DrawingArea.h  IlluminationWindow.cc  IlluminationWindow.h  MainWindowController.cc  MainWindowController.h  Makefile.am  Matrix33.h  NavigationWindow.cc  NavigationWindow.h  NumericWindow.cc  NumericWindow.h  OptionMenuBuilder.h  ParameterWindow.h  PositionWindow.cc  PositionWindow.h  ProgressDialog.cc  ProgressDialog.h  RGBToStandard.cc  RGBToStandard.h  RadioButtonBuilder.h  Requester.cc  Requester.h  SaveImageDialog.cc  SaveImageDialog.h  (+12 more)
surf/image-formats/: AvailableImageFormats.cc  AvailableImageFormats.h  ByExtension.cc  ByExtension.h  EPS.cc  EPS.h  GTS.cc  GTS.h  ImageFormats.cc  ImageFormats.h  Inventor.cc  Inventor.h  JPEG.cc  JPEG.h  Makefile.am  OOGL.cc  OOGL.h  PBM.cc  PBM.h  PNG.cc  PNG.h  PPM.cc  PPM.h  Pipe.cc  Pipe.h  Postscript.cc  Postscript.h  Sun.cc  Sun.h  TIFF.cc  TIFF.h  XBitmap.cc  XBitmap.h  XPM.cc  XPM.h  XWD.cc  XWD.h  bm2font.cc  bm2font.h  eps.cc  (+13 more)
surf/misc/: .cvsignore  FileWriter.h  IO.cc  IO.h  Makefile.am  Misc.cc  Misc.h  mystrdup.cc  mystrdup.h  welcomeMessage.cc  welcomeMessage.h
surf/mt/: GuiThread.cc  GuiThread.h  Makefile.am  TSDrawingArea.cc  TSDrawingArea.h  Thread.cc  Thread.h  cthread.cc  cthread.h
surf/src/: .cvsignore  CanvasDataStruct.cc  CanvasDataStruct.h  Makefile.am  Options.cc  Options.h  RGBToNetscape.cc  RGBToNetscape.h  RgbBuffer.cc  RgbBuffer.h  SurfaceDataStruct.cc  SurfaceDataStruct.h  WindowGeometry.cc  WindowGeometry.h  antialiasing_factor.cc  antialiasing_factor.h  bit_buffer.cc  bit_buffer.h  color.h  compfn.cc  compfn.h  cube.cc  cube.h  def.h  float_buffer.cc  float_buffer.h  gui_config.cc  gui_config.h  gui_enum.h  init_parser.cc  init_parser.h  main.cc  mytypes.h  oct_quan.cc  oct_quan.h  roots.cc  roots.h  stop.cc  stop.h  surface_clip.cc  (+2 more)
surf/tools/: convertScript.pl  header.pl  testheader.pl  txt2c.pl
surf/triangulator/: .cvsignore  Makefile.am  Triangulator.cc  Triangulator.h
surf/yaccsrc/: .cvsignore  Script.cc  (+30 more)
(+40 files in other folders)
