dnl ------------------------
dnl configure.in for gtksurf
dnl ------------------------

AC_PREREQ(2.13)
AC_INIT(src/main.cc)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gtksurf, 0.1)
CF_VERBOSE


dnl some standard checks:
dnl ---------------------

AC_PROG_CC
AC_PROG_CXX
AC_AIX
AC_ISC_POSIX
AC_MINIX
AC_HEADER_STDC


dnl check if C++ compiler really works:
dnl -----------------------------------

AC_LANG_SAVE
AC_LANG_CPLUSPLUS

JOJO_CXX_WARNINGS
JOJO_CXX_NAMESPACES
JOJO_CXX_STDNAMESPACE

AC_LANG_RESTORE

if test "$GCC" = "no" ; then
	case `uname` in
	IRIX*)
		CXXFLAGS="-LANG:std $CXXFLAGS"
		;;
	esac
fi



dnl include /usr/local/lib and /usr/local/include in search paths:
dnl --------------------------------------------------------------

if test -d "/usr/local/lib/"; then
	LDFLAGS="-L/usr/local/lib/ $LDFLAGS"
fi
if test -d "/usr/local/include/"; then
	CPPFLAGS="-I/usr/local/include/ $CPPFLAGS"
fi

dnl check for STLport:
dnl ------------------

AC_ARG_WITH(stlport-prefix,[  --with-stlport-prefix=PFX Prefix where STLport is installed (optional)],
            stlport_prefix="$withval", stlport_prefix="")
AC_ARG_ENABLE(stlport, [  --disable-stlport       Do not try to find STLport includes and library],
                    , enable_stlport=yes)

if test "x$enable_stlport" = "xyes" ; then
    AC_MSG_CHECKING(for STLport includes)
    stlportinclude=""
    if test x$stlport_prefix != x ; then
        if test -d "$stlport_prefix/include/stlport"; then
	    stlportinclude="-I$stlport_prefix/include/stlport"
            LDFLAGS="-L$stlport_prefix/lib $LDFLAGS"
        fi
    else
        if test -d "/usr/include/stlport"; then
            stlportinclude="-I/usr/include/stlport"
        elif test -d "/usr/local/include/stlport"; then
            stlportinclude="-I/usr/local/include/stlport"
        fi
    fi
    if test x$stlportinclude != x ; then
        CPPFLAGS="$stlportinclude $CPPFLAGS"
        AC_MSG_RESULT($stlportinclude)
        AC_CHECK_LIB(stlport, main)
    else
        AC_MSG_RESULT(no)
    fi
fi

dnl standard headers:
dnl =================

AC_CHECK_HEADERS(unistd.h)


dnl do we have getopt() and (optionally) GNU getopt_long()?
dnl =======================================================

AC_CHECK_FUNC(getopt,, AC_MSG_ERROR([Sorry: can't find getopt() function]))
AC_CHECK_HEADER(getopt.h)
AC_CHECK_LIB(gnugetopt, main)
AC_CHECK_FUNCS(getopt_long)


dnl check if we have GTK >= 1.2.0
dnl =============================

AM_PATH_GTK(1.2.0)

CPPFLAGS="$CPPFLAGS $GTK_CFLAGS"
LDFLAGS="$LDFLAGS $GTK_LDFLAGS"
LIBS="$LIBS $GTK_LIBS"

dnl checks for libgdk-pixbuf, libglade, gtkgl
dnl =========================================

AM_PATH_GDK_PIXBUF
AM_PATH_LIBGLADE
AM_PATH_GTKGL


AM_MISSING_PROG(HELP2MAN, help2man, $missing_dir)
AM_MISSING_PROG(SED, sed, $missing_dir)

AC_SUBST(CPPFLAGS)

AC_OUTPUT(Makefile
          src/Makefile
          pkgdata/Makefile
          docs/Makefile)
