dnl ---------------------
dnl configure.in for surf
dnl ---------------------

AC_PREREQ(2.13)
AC_INIT(src/main.cc)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(surf, 1.1.0)
CF_VERBOSE


dnl some standard checks:
dnl ---------------------

AC_PROG_CC
AC_PROG_CXX
AC_AIX
AC_ISC_POSIX
AC_MINIX
AC_HEADER_STDC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB


dnl check if C++ compiler really works:
dnl -----------------------------------

AC_LANG_SAVE
AC_LANG_CPLUSPLUS

AC_CXX_FUNCTION_NONTYPE_PARAMETERS
if test "$ac_cv_cxx_function_nontype_parameters" = "no"; then
	AC_MSG_ERROR(["Sorry, your compiler is not smart enough to build surf"])
fi

ICE_CXX_EXPLICIT_TEMPLATE_INSTANTIATION

JOJO_CXX_WARNINGS
JOJO_CXX_NAMESPACES
JOJO_CXX_STDNAMESPACE

AC_LANG_RESTORE

if test "$GCC" = "no" ; then
	case `uname` in
	IRIX*)
		CXXFLAGS="-LANG:std $CXXFLAGS"
		;;
	esac
fi


dnl add /usr/local/include and /usr/local/lib if they exist
dnl (there are systems which don't automatically include these standard paths..)

if test -d "/usr/local/lib/" ; then
	LDFLAGS="-L/usr/local/lib/ $LDFLAGS"
fi
if test -d "/usr/local/include/" ; then
	CPPFLAGS="-I/usr/local/include/ $CPPFLAGS"
fi


dnl checks for header files:
dnl ------------------------

AC_CHECK_HEADERS(unistd.h stdint.h)


dnl check options:
dnl --------------


dnl do we have getopt() and (optionally) GNU getopt_long()?

AC_CHECK_FUNC(getopt,, AC_MSG_ERROR([Sorry: can't find getopt() function]))
AC_CHECK_HEADER(getopt.h, AC_CHECK_FUNCS(getopt_long))

dnl check for gethostname prototype in unistd.h:

AC_CHECK_HEADERS(unistd.h stdint.h)

AC_CACHE_CHECK(whether there's a gethostname prototype in unistd.h,
               ac_cv_gethostname_has_prototype,
               AC_EGREP_HEADER(gethostname, unistd.h,
	                       ac_cv_gethostname_has_prototype=yes,
 	                       ac_cv_gethostname_has_prototype=no
                               AC_DEFINE(NO_GETHOSTNAME_PROTO)))


dnl math lib and (g)zlib:
dnl ---------------------

RS_CHECK_LIB(m, main)
AC_CHECK_LIB(z,  main,,
	     AC_CHECK_LIB(gz, main,,
                          AC_MSG_ERROR([Sorry: Can't find libz/libgz.])))


dnl checks for image libraries (optional):
dnl --------------------------------------

dnl JPEG library and jpeglib.h:

AC_CHECK_HEADER(jpeglib.h,
	        AC_CHECK_LIB(jpeg, main))

dnl PNG library and png.h

AC_CHECK_HEADER(png.h,
	        AC_CHECK_LIB(png, main))

dnl tiff library and header file:

tifflibfound="no"
AC_CHECK_HEADER(tiffio.h,
	        AC_CHECK_LIB(tiff, main,
	                     tifflibfound="yes"
			     AC_DEFINE(HAVE_LIBTIFF)
			     LIBS="$LIBS -ltiff"))

if test "$libtifffound" = "no"
then
dnl (FreeBSD 3.0 has tiff34.so instead of tiff.so and the header files
dnl are in /usr/local/lib/tiff34)
  AC_CHECK_HEADER(tiff34/tiffio.h,
                  AC_CHECK_LIB(tiff34, main,
	                       AC_DEFINE(TIFF_HEADER_34)
		               AC_DEFINE(HAVE_LIBTIFF)
			       LIBS="$LIBS -ltiff34"))
fi

	
dnl check for gmp:
dnl --------------

AC_ARG_WITH(gmp-prefix,[  --with-gmp-prefix=PFX   Prefix where GMP is installed],
            gmp_prefix="$withval", gmp_prefix="")


if test x"$gmp_prefix" != x ; then
	LDFLAGS="-L$gmp_prefix/lib $LDFLAGS"
	CPPFLAGS="-I$gmp_prefix/include $CPPFLAGS"
fi

AC_CHECK_HEADER(gmp.h,,
		AC_CHECK_HEADER(gmp2/gmp.h,
				AC_DEFINE(GMP2_PREFIX),
				AC_MSG_ERROR([Sorry: can't find header file gmp.h])))

AC_CHECK_LIB(gmp, main,,
             AC_CHECK_LIB(gmp2, main,,
			  AC_MSG_ERROR([Sorry: can't find gmp])))

dnl check for GTS:
dnl --------------

AC_ARG_WITH(gts-prefix,[  --with-gts-prefix=PFX   Prefix where GTS is installed],
            gts_prefix="$withval", gts_prefix="")

if test x"$gts_prefix" != x ; then
	LDFLAGS="-L$gts_prefix/lib $LDFLAGS"
	CPPFLAGS="-I$gts_prefix/include $CPPFLAGS"
fi

AC_CHECK_HEADER(gts.h,
                AC_CHECK_LIB(gts, main,
                             havegts="yes"
                               AC_DEFINE(HAVE_LIBGTS)
                               LIBS="$LIBS -lgts",
                             havegts="no"))

dnl GTS needs glib..:
if test "$havegts" = "yes" ; then
	AM_PATH_GLIB(1.2.0)
	LIBS="$LIBS $GLIB_LIBS"
	CFLAGS="$CFLAGS $GLIB_CFLAGS"
	CXXFLAGS="$CFLAGS $GLIB_CFLAGS"
fi


dnl link with lex-libaray:
dnl ----------------------

LIBS="$LIBS $LEXLIB"

AC_OUTPUT(Makefile
          docs/Makefile
          src/Makefile
	  image-formats/Makefile
	  drawfunc/Makefile
	  yaccsrc/Makefile
	  curve/Makefile
	  draw/Makefile
	  misc/Makefile
	  debug/Makefile
	  dither/Makefile
          triangulator/Makefile)

