AM_CPPFLAGS = -DPKGDATADIR=\"$(pkgdatadir)\" -DBINDIR=\"$(bindir)\"

bin_PROGRAMS = gtk2surf

gtk2surf_SOURCES = main.cc \
		  About.h About.cc \
		  ScriptWindow.h ScriptWindow.cc \
		  ImageWindow.h ImageWindow.cc \
		  DitherWindow.h DitherWindow.cc \
		  Misc.h Misc.cc \
		  Kernel.h Kernel.cc

