#noinst_LIBRARIES = libdummy.a
#libdummy_a_SOURCES =
#libdummy.a:: $(libdummy_a_OBJECTS) $(libdummy_a_DEPENDENCIES)

PIXMAPS = new.xpm open.xpm save.xpm navigate.xpm \
          render_curve.xpm render_surface.xpm exec.xpm \
          logo.xpm

pkgdata_DATA = gtksurf.glade $(PIXMAPS)

EXTRA_DIST = gtksurf.glade $(PIXMAPS)
