CPPFLAGS += -DPKGDATADIR=\"$(pkgdatadir)\" -DBINDIR=\"$(bindir)\"

bin_PROGRAMS = gtksurf

gtksurf_SOURCES = main.cc \
		  Kernel.h Kernel.cc \
                  Glade.h Glade.cc \
		  ScriptWindow.h ScriptWindow.cc \
		  ImageWindow.h ImageWindow.cc \
		  NavigationWindow.h NavigationWindow.cc \
		  GLArea.h GLArea.cc \
		  About.h About.cc \
                  Matrix.h Vec3.h \
                  Misc.h Misc.cc
