CPPFLAGS += -DPKGDATADIR=\"$(pkgdatadir)\" -DBINDIR=\"$(bindir)\"

bin_PROGRAMS = gtksurf

gtksurf_SOURCES = main.cc \
		  Kernel.h Kernel.cc \
                  Glade.h Glade.cc \
		  ScriptWindow.h ScriptWindow.cc \
		  PrefsWindow.h PrefsWindow.cc \
		  ImageWindow.h ImageWindow.cc \
                  DitherWindow.h DitherWindow.cc \
		  CurvePropsWindow.h CurvePropsWindow.cc \
                  gdk_draw_bitmap.h gdk_draw_bitmap.cc \
		  About.h About.cc \
                  Misc.h Misc.cc
#		  NavigationWindow.h NavigationWindow.cc \
#		  GLArea.h GLArea.cc \
#                 OOGL.h OOGL.cc \
#                 Matrix.h Vec3.h GLtypes.h
